<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="100px">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attempts" />

            <TextView
                android:id="@+id/attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/matched" />

            <TextView
                android:id="@+id/matched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number2" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical">

            <TableRow>

                <Button
                    android:id="@+id/field0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field0"
                    />

                <Button
                    android:id="@+id/field1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field1" />

                <Button
                    android:id="@+id/field2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field2" />

                <Button
                    android:id="@+id/field3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field3" />
            </TableRow>

            <TableRow>


                <Button
                    android:id="@+id/field4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field4" />

                <Button
                    android:id="@+id/field5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field5" />

                <Button
                    android:id="@+id/field6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field6" />

                <Button
                    android:id="@+id/field7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field7" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/field8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field8" />

                <Button
                    android:id="@+id/field9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field9" />

                <Button
                    android:id="@+id/field10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field10" />

                <Button
                    android:id="@+id/field11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field11" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/field12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field12" />

                <Button
                    android:id="@+id/field13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field13" />

                <Button
                    android:id="@+id/field14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field14" />

                <Button
                    android:id="@+id/field15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field15" />
            </TableRow>

        </TableLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginBottom="100px">

        <Button
            android:id="@+id/newGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>